HACK: Hard-coded second tier browsing to sort in descending order for "author", "qmuauthor" and "qmucentre" as defined in dspace/local.cfg.
Also, added entry for sort list author in messages.xml

--- a/dspace-xmlui/src/main/webapp/i18n/messages.xml
+++ b/dspace-xmlui/src/main/webapp/i18n/messages.xml
@@ -131,6 +131,7 @@
 
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.etal.all">All</message>
 
+	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sort_by.author">person</message>
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sort_by.title">title</message>
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sort_by.dateissued">issue date</message>
 	<message key="xmlui.ArtifactBrowser.ConfigurableBrowse.sort_by.dateaccessioned">submit date</message>
