Customized item-view, hide thumbnails in discovery and hide statistics link in admin sidebar

--- a/dspace-xmlui/src/main/webapp/i18n/messages.xml
+++ b/dspace-xmlui/src/main/webapp/i18n/messages.xml
@@ -2208,6 +2208,17 @@
 	<message key="xmlui.dri2xhtml.METS-1.0.item-date">Date</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-publisher">Publisher</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-subject">Subject</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-citation">Citation</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-version">Version</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-status">Status</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-doi">DOI</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-issn">ISSN</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-date">Date</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-type">Type</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-keywords">Keywords</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-rights">Rights</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-rights-embargodate">Embargo Date</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-rights-embargoreason">Embargo Reason</message>
 
 	<message key="xmlui.dri2xhtml.METS-1.0.item-citation">Citation</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-version">Version</message>
