--- a/dspace-xmlui/src/main/webapp/i18n/messages.xml
+++ b/dspace-xmlui/src/main/webapp/i18n/messages.xml
@@ -2279,6 +2279,7 @@
 	<message key="xmlui.dri2xhtml.METS-1.0.item-relation">Description of related resources</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-uri">URI</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-publisher-uri">Publisher link</message>
+	<message key="xmlui.dri2xhtml.METS-1.0.item-url">URL</message>
 
 	<message key="xmlui.dri2xhtml.METS-1.0.item-metadata-head">Item metadata</message>
 	<message key="xmlui.dri2xhtml.METS-1.0.item-files-head">Files in this item</message>
